# app/Http/Controllers/RawgDomainController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Services\RawgDomainService;
 use Illuminate\Http\JsonResponse;
+use OpenApi\Attributes as OA;
 
 class RawgDomainController extends Controller
 {
@@ -12,6 +13,13 @@ class RawgDomainController extends Controller
     ) {
     }
 
+    #[OA\Get(
+        path: '/api/rawg/domain/genres',
+        tags: ['domain'],
+        responses: [
+            new OA\Response(response: 200, description: 'List of RAWG genres')
+        ]
+    )]
     public function genres(): JsonResponse
     {
         $data = $this->rawgDomainService->getGenres();
@@ -19,6 +27,13 @@ class RawgDomainController extends Controller
         return response()->json($data);
     }
 
+    #[OA\Get(
+        path: '/api/rawg/domain/tags',
+        tags: ['domain'],
+        responses: [
+            new OA\Response(response: 200, description: 'List of RAWG tags')
+        ]
+    )]
     public function tags(): JsonResponse
     {
         $data = $this->rawgDomainService->getTags();
@@ -26,6 +41,13 @@ class RawgDomainController extends Controller
         return response()->json($data);
     }
 
+    #[OA\Get(
+        path: '/api/rawg/domain/platforms',
+        tags: ['domain'],
+        responses: [
+            new OA\Response(response: 200, description: 'List of RAWG platforms')
+        ]
+    )]
     public function platforms(): JsonResponse
     {
         $data = $this->rawgDomainService->getPlatforms();
